@startuml Builder_Pizza

package "Product" {
  class BasicPizza {
    +size: PizzaSize
    +cheese: boolean
    +pepperoni: boolean
    +bacon: boolean
    +extraSauce: boolean
    +toString(): String
  }

  enum PizzaSize {
    SMALL
    MEDIUM
    LARGE
  }
}

package "Builder" {
  interface PizzaBuilder {
    +reset(): PizzaBuilder
    +size(size: PizzaSize): PizzaBuilder
    +withCheese(): PizzaBuilder
    +withPepperoni(): PizzaBuilder
    +withBacon(): PizzaBuilder
    +withExtraSauce(): PizzaBuilder
    +build(): BasicPizza
  }

  class ClassicPizzaBuilder {
    -product: BasicPizza
    +reset(): PizzaBuilder
    +size(size: PizzaSize): PizzaBuilder
    +withCheese(): PizzaBuilder
    +withPepperoni(): PizzaBuilder
    +withBacon(): PizzaBuilder
    +withExtraSauce(): PizzaBuilder
    +build(): BasicPizza
  }

  ClassicPizzaBuilder ..|> PizzaBuilder
}

package "Director" {
  class PizzaDirector {
    -builder: PizzaBuilder
    +setBuilder(b: PizzaBuilder): void
    +makeMargherita(): BasicPizza
    +makePepperoniLarge(): BasicPizza
    +makeBaconDeluxe(): BasicPizza
  }

  PizzaDirector ..> PizzaBuilder
}

package "Client" {
  class Application {
    +makeMenu(): String[]
  }

  Application ..> PizzaDirector
}

@enduml
